--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon ./src/server.js"
+    "test": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
